# PhysicallyBasedRenderingInOpenGL

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  TODO.txt  imgui.ini  run_commands.txt  vcpkg.json
include/: bloom_framebuffer.h  bloom_renderer.h  camera.h  ibl_renderer.h  pbr_scene.h  point_light.h  shader.h  ui_to_scene_data.h
include/display/: base_window.h  game_window.h
include/shaders/: brdf_shader.h  cube_map_convolution_shader.h  cube_map_shader.h  environment_cube_map_shader.h  equirectangular_to_cube_map_shader.h  framebuffer_shader.h  irradiance_cube_map_shader.h  prefilter_shader.h  shader.h  shader.hpp  skybox_shader.h  sphere_shader.h
include/shapes/: cube.h  quad.h  shape.h  sphere.h
include/utils/: constants.h  utility.h
libs/imgui/: imgui.h
resources/shaders/: testing.fs
resources/shaders/color_cube/: color_cube.fs  color_cube.vs
resources/shaders/cubemap/: mirror_cube.fs  skybox.fs
resources/shaders/framebuffer/: blur_shader.fs  edge_detection_shader.fs  grayscale_shader.fs  mirror_shader.fs
src/: bloom_framebuffer.cpp  bloom_renderer.cpp  camera.cpp  ibl_renderer.cpp  main.cpp  pbr_scene.cpp  point_light.cpp  shader.cpp  ui_to_scene_data.cpp
src/display/: base_window.cpp  game_window.cpp
src/imgui/: imgui_demo.cpp  imgui_impl_glfw.cpp
src/shaders/: EquirectangularToCubemapShader.cpp  brdf_shader.cpp  cube_map_convolution_shader.cpp  cube_map_shader.cpp  environment_cube_map_shader.cpp  equirectangular_to_cube_map_shader.cpp  framebuffer_shader.cpp  irradiance_cube_map_shader.cpp  prefilter_shader.cpp  shader.cpp  skybox_shader.cpp  sphere_shader.cpp
src/shapes/: cube.cpp  quad.cpp  sphere.cpp
src/utils/: constants.cpp  utility.cpp
(+25 files in other folders)
